# wildlifeai

./: .gitignore  README.md  config.json  pyproject.toml
src/wildlifeai/: __init__.py  cli.py  models.py  pipeline.py  utils.py
